--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@types/styled-components-react-native": "^5.2.5",
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-pager-view": "^6.2.3",
