--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.18",
     "@types/styled-components-react-native": "^5.2.5",
     "axios": "^1.6.7",
     "react": "18.2.0",
@@ -21,6 +22,9 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
